<resources>
    <string name="app_name">ChatClient</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used in Login Fragment -->
    <string name="login_fragment_label">Login</string>

    <!-- Strings used in Second Fragment -->
    <string name="second_fragment_label">Friends!</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="remove_friend">LOSE FRIEND</string>


    <!-- Deprecated Strings -->
    <string name="first_fragment_label">First Fragment</string>

    <string name="back">Back</string>
    <string name="ReceiveChat">Receive</string>
    <string name="SendChat">Send</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="loginButton">Login</string>

    <string name="Username">Username:</string>
    <string name="ServerIp">Server IP address:</string>

    <string name="done">Done</string>
    <string name="hint">Enter your message here!</string>
    <string name="friend_message">Friend Message</string>
    <string name="friend_status_goes_here">Friend status goes here</string>

</resources>